microservice/k8s/03-usearch-crawler.yaml
# A headless service will populate the SRV (service) records for the crawler
# pods and allow partition detection logic to query the total number of
# available pods.
apiVersion: v1
kind: Service
metadata:
  name: usearch-crawler-headless-service
  namespace: usearch-app
spec:
  clusterIP: None
  # Include the pprof port to ensure that SRV records are properly generated
  ports:
  - port: 6060
    targetPort: 6060
    name: pprof-server
  selector:
    app: usearch-crawler

---

# A stateful-set will ensure that each pod is assigned a predictable hostname
# that includes the pod's position in the set.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: usearch-crawler
  namespace: usearch-app
  labels:
    app: usearch-crawler
spec:
  serviceName: usearch-crawler-headless-service
  selector:
    matchLabels:
      app: usearch-crawler
  replicas: 2
  template:
    metadata:
      labels:
        app: usearch-crawler
    spec:
      containers:
      - name: usearch-crawler
        imagePullPolicy: Always
        image: myckie/usearch-crawler:latest
        args:
          - "-link-graph-api=usearch-linkgraph-service.usearch-data:8080"
          - "-text-indexer-api=usearch-textindexer-service.usearch-data:8080"
          - "-partition-detection-mode=dns=usearch-crawler-headless"
          - "-num-of-workers=20"
          - "-update-interval=5m"
          - "-reindex-threshold=10m"
        ports:
        - containerPort: 6060
          name: pprof-server
        resources:
          requests:
            cpu: "300m"
          limits:
            cpu: "1000m"
