microservice/k8s/07-usearch-textindexer.yaml
apiVersion: v1
kind: Service
metadata:
  name: usearch-textindexer-service
  namespace: usearch-data
spec:
  type: ClusterIP
  selector:
    app: usearch-textindexer
  ports:
  # Listening address.
  - port: 8080
    # Pod / container port to forward traffic to.
    targetPort: 8080
    name: grpc-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: usearch-textindexer
  namespace: usearch-data
spec:
  selector:
    matchLabels:
      app: usearch-textindexer
      namespace: usearch-data
  replicas: 2
  template:
    metadata:
      labels:
        app: usearch-textindexer
        role: data-api
    spec:
      containers:
      - name: usearch-textindexer
        imagePullPolicy: Always
        image: myckie/usearch-textindexer:latest
        args:
          - "-text-index-uri=es://elasticsearch-master.usearch-data:9200"
        ports:
        - containerPort: 8080
          name: grpc-server
        - containerPort: 6060
          name: pprof-server
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
